Fix image overflow on mobile.

--- a/www/themes/backdropcms/css/borg-components.css
+++ b/www/themes/backdropcms/css/borg-components.css
@@ -180,7 +180,7 @@ body.front .block-borg-blocks-tagline h2 {
 *******************************************************************************/
 
 .l-cut-cormers .l-col {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 .l-cut-cormers .l-col .block {
   height: 80%;
